--- a/package.json
+++ b/package.json
@@ -20,8 +20,9 @@
 		"@tailwindcss/forms": "^0.5.10",
 		"@tailwindcss/typography": "^0.5.16",
 		"autoprefixer": "^10.4.20",
-		"bits-ui": "^1.3.14",
+		"bits-ui": "^0.22.0",
 		"clsx": "^2.1.1",
+		"lucide-svelte": "^0.485.0",
 		"prettier": "^3.4.2",
 		"prettier-plugin-svelte": "^3.3.3",
 		"prettier-plugin-tailwindcss": "^0.6.10",
@@ -33,5 +34,9 @@
 		"tailwindcss-animate": "^1.0.7",
 		"typescript": "^5.0.0",
 		"vite": "^6.0.0"
+	},
+	"dependencies": {
+		"@lucide/svelte": "^0.485.0",
+		"mode-watcher": "^0.5.1"
 	}
 }
