--- a/package.json
+++ b/package.json
@@ -37,6 +37,8 @@
 	},
 	"dependencies": {
 		"@lucide/svelte": "^0.485.0",
-		"mode-watcher": "^0.5.1"
+		"ai": "^4.2.8",
+		"mode-watcher": "^0.5.1",
+		"openai": "^4.90.0"
 	}
 }
