--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
 	"dependencies": {
 		"@lucide/svelte": "^0.485.0",
 		"ai": "^4.2.8",
+		"html2canvas": "^1.4.1",
 		"mode-watcher": "^0.5.1",
 		"openai": "^4.90.0"
 	}
