--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 		"lint": "prettier --check ."
 	},
 	"devDependencies": {
+		"@lucide/svelte": "^0.485.0",
 		"@sveltejs/adapter-auto": "^4.0.0",
 		"@sveltejs/kit": "^2.16.0",
 		"@sveltejs/vite-plugin-svelte": "^5.0.0",
@@ -36,10 +37,13 @@
 		"vite": "^6.0.0"
 	},
 	"dependencies": {
-		"@lucide/svelte": "^0.485.0",
+		"@supabase/supabase-js": "^2.49.4",
 		"ai": "^4.2.8",
 		"html2canvas": "^1.4.1",
 		"mode-watcher": "^0.5.1",
-		"openai": "^4.90.0"
+		"openai": "^4.93.0",
+		"prodia": "^1.5.0",
+		"replicate": "^1.0.1",
+		"supabase": "^2.20.12"
 	}
 }
