--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
 		"bits-ui": "^0.22.0",
 		"clsx": "^2.1.1",
 		"lucide-svelte": "^0.485.0",
+		"paneforge": "^0.0.6",
 		"prettier": "^3.4.2",
 		"prettier-plugin-svelte": "^3.3.3",
 		"prettier-plugin-tailwindcss": "^0.6.10",
@@ -39,11 +40,14 @@
 	"dependencies": {
 		"@supabase/supabase-js": "^2.49.4",
 		"ai": "^4.2.8",
+		"canvas": "^3.1.0",
 		"html2canvas": "^1.4.1",
+		"konva": "^9.3.20",
 		"mode-watcher": "^0.5.1",
 		"openai": "^4.93.0",
 		"prodia": "^1.5.0",
 		"replicate": "^1.0.1",
-		"supabase": "^2.20.12"
+		"supabase": "^2.20.12",
+		"svelte-konva": "^0.3.1"
 	}
 }
