--- a/package.json
+++ b/package.json
@@ -48,7 +48,6 @@
 		"openai": "^4.93.0",
 		"prodia": "^1.5.0",
 		"replicate": "^1.0.1",
-		"supabase": "^2.20.12",
-		"svelte-konva": "^0.3.1"
+		"supabase": "^2.20.12"
 	}
 }
