--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
 	},
 	"dependencies": {
 		"@supabase/supabase-js": "^2.49.4",
+		"@tailwindcss/vite": "^4.1.6",
 		"ai": "^4.2.8",
 		"canvas": "^3.1.0",
 		"html2canvas": "^1.4.1",
@@ -49,6 +50,7 @@
 		"openai": "^4.93.0",
 		"prodia": "^1.5.0",
 		"replicate": "^1.0.1",
-		"supabase": "^2.20.12"
+		"supabase": "^2.20.12",
+		"tw-to-css": "^0.0.12"
 	}
 }
