--- a/package.json
+++ b/package.json
@@ -21,12 +21,13 @@
 		"@sveltejs/kit": "^2.16.0",
 		"@sveltejs/vite-plugin-svelte": "^5.0.0",
 		"@tailwindcss/forms": "^0.5.10",
-		"@tailwindcss/postcss": "^4.1.6",
 		"@tailwindcss/typography": "^0.5.16",
+		"autoprefixer": "^10.4.21",
 		"bits-ui": "^0.22.0",
 		"clsx": "^2.1.1",
 		"lucide-svelte": "^0.485.0",
 		"paneforge": "^0.0.6",
+		"postcss": "^8.5.3",
 		"prettier": "^3.4.2",
 		"prettier-plugin-svelte": "^3.3.3",
 		"prettier-plugin-tailwindcss": "^0.6.11",
@@ -34,14 +35,13 @@
 		"svelte-check": "^4.0.0",
 		"tailwind-merge": "^3.0.2",
 		"tailwind-variants": "^1.0.0",
-		"tailwindcss": "^4.1.6",
+		"tailwindcss": "^3.4.17",
 		"tailwindcss-animate": "^1.0.7",
 		"typescript": "^5.0.0",
 		"vite": "^6.0.0"
 	},
 	"dependencies": {
 		"@supabase/supabase-js": "^2.49.4",
-		"@tailwindcss/vite": "^4.1.6",
 		"ai": "^4.2.8",
 		"canvas": "^3.1.0",
 		"html2canvas": "^1.4.1",
