--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
 		"@tailwindcss/forms": "^0.5.10",
 		"@tailwindcss/typography": "^0.5.16",
 		"autoprefixer": "^10.4.21",
-		"bits-ui": "^0.22.0",
+		"bits-ui": "^1.8.0",
 		"clsx": "^2.1.1",
 		"lucide-svelte": "^0.485.0",
 		"paneforge": "^0.0.6",
@@ -42,11 +42,13 @@
 	},
 	"dependencies": {
 		"@supabase/supabase-js": "^2.49.4",
+		"@tabler/icons-svelte": "^3.34.0",
 		"ai": "^4.2.8",
 		"canvas": "^3.1.0",
 		"html2canvas": "^1.4.1",
 		"interactjs": "^1.10.27",
 		"konva": "^9.3.20",
+		"liquid-glass-svelte": "^1.2.0",
 		"mode-watcher": "^0.5.1",
 		"openai": "^4.93.0",
 		"prodia": "^1.5.0",
